--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,5 +17,38 @@
     <link rel="stylesheet" href="css/app.css" />
     <script src="js/app.js"></script>
   </head>
-  <body></body>
+  <body>
+
+    <header class="header">
+        <h1 class="h1"><a href="#Inicio" class="a">Gonzalo Acero</a></h1>
+        //Inicio menu
+        <nav class="nav">
+            <ul class="ul">
+                <li class="li"><a href="#inicio" title="Inicio" class="a">Item 1</a></li>
+                <li class="li"><a href="#works" title="Works" class="a">Item 2</a></li>
+                <li class="li"><a href="#about" title="About" class="a">Item 3</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <div class="seccion" id="inicio">
+            <div class="circulos">
+                <circulo></circulo>
+                <circulo></circulo>
+                <circulo></circulo>
+                <circulo></circulo>
+            </div>
+            <section class="section">
+                <h2 class="h2">Gonzalo Acero</h2>
+                <h3 class="h3">Backend Developer</h3>
+            </section>
+        </div>
+        <section class="seccion" id="works">
+            //Aca van los proyectos a programar pendientes
+
+            <h2 class="h2">Projectos</h2>
+            
+        </section>
+    </main>
+  </body>
 </html>
