--- a/index.html
+++ b/index.html
@@ -18,37 +18,87 @@
     <script src="js/app.js"></script>
   </head>
   <body>
-
     <header class="header">
-        <h1 class="h1"><a href="#Inicio" class="a">Gonzalo Acero</a></h1>
-        //Inicio menu
-        <nav class="nav">
-            <ul class="ul">
-                <li class="li"><a href="#inicio" title="Inicio" class="a">Item 1</a></li>
-                <li class="li"><a href="#works" title="Works" class="a">Item 2</a></li>
-                <li class="li"><a href="#about" title="About" class="a">Item 3</a></li>
-            </ul>
-        </nav>
+      <h1 class="h1"><a href="#Inicio" class="a">Gonzalo Acero</a></h1>
+      //Inicio menu
+      <nav class="nav">
+        <ul class="ul">
+          <li class="li">
+            <a href="#inicio" title="Inicio" class="a">Item 1</a>
+          </li>
+          <li class="li">
+            <a href="#works" title="Works" class="a">Item 2</a>
+          </li>
+          <li class="li">
+            <a href="#about" title="About" class="a">Item 3</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main class="main">
-        <div class="seccion" id="inicio">
-            <div class="circulos">
-                <circulo></circulo>
-                <circulo></circulo>
-                <circulo></circulo>
-                <circulo></circulo>
-            </div>
-            <section class="section">
-                <h2 class="h2">Gonzalo Acero</h2>
-                <h3 class="h3">Backend Developer</h3>
-            </section>
+      <div class="seccion" id="inicio">
+        <div class="circulos">
+          <circulo></circulo>
+          <circulo></circulo>
+          <circulo></circulo>
+          <circulo></circulo>
         </div>
-        <section class="seccion" id="works">
-            //Aca van los proyectos a programar pendientes
-
-            <h2 class="h2">Projectos</h2>
-            
+        <section class="section">
+          <h2 class="h2">Gonzalo Acero</h2>
+          <h3 class="h3">Backend Developer</h3>
         </section>
+      </div>
+      <section class="seccion" id="works">
+        //Aca van los proyectos a programar pendientes
+
+        <h2 class="h2">Projectos</h2>
+        <p>
+          En este lugar vas a encontrar los proyectos que hice estudiando la
+          carrera de Analisis de Sistemas
+        </p>
+
+        <div class="grid">
+          <article class="article">
+            <a href="#" title="Proyecto1">
+              <img src="#" alt="Imagen" loading="lazy" />
+              <h4 class="h4">Nombre Proyecto</h4>
+            </a>
+          </article>
+        </div>
+      </section>
+      <section class="seccion" id="about">
+        <h2 class="h2">Sobre mi</h2>
+        <p class="p">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sequi
+          quae, iusto commodi perspiciatis doloremque itaque cumque deserunt
+          alias, aut cupiditate, autem esse hic assumenda eveniet ipsam eos
+          delectus nostrum. Quisquam ratione laborum sapiente ab consequuntur
+          explicabo corporis, officia iusto porro tempora a perferendis
+          obcaecati aspernatur laudantium, adipisci mollitia nesciunt nulla
+          minus! Numquam sed est assumenda voluptas unde reiciendis suscipit?
+        </p>
+        <p class="p">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem
+          voluptatum amet magni ratione quam corporis reprehenderit nostrum
+          obcaecati, qui a animi doloribus voluptates tempore aspernatur,
+          tenetur quae consectetur quis optio. Reprehenderit asperiores veniam
+          velit dicta praesentium dolor rerum nam maxime adipisci perspiciatis
+          quibusdam ea natus, deserunt vel, cupiditate eum. Facilis expedita
+          eaque voluptates error voluptas debitis eligendi tempora quia rem.
+        </p>
+        <p class="p">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+          incidunt similique asperiores assumenda sequi recusandae consequatur
+          vero earum iste modi suscipit adipisci, magnam iusto aut inventore ex
+          totam aperiam eos. Odio quas illum blanditiis! Pariatur, neque tempore
+          nam aut enim, harum reiciendis nostrum numquam, earum impedit dicta
+          perferendis dolore mollitia cumque corrupti architecto perspiciatis
+          modi voluptatum! Cumque quibusdam nihil ipsum!
+        </p>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="centrado"></div>
+    </footer>
   </body>
 </html>
