--- a/index.html
+++ b/index.html
@@ -3,34 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio de Gonzalo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital@0;1&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+    <title>Portfolio de Gonzalo</title>
+    
     <link rel="stylesheet" href="css/app.css" />
     <script src="js/app.js"></script>
   </head>
   <body>
     <header class="header">
       <h1 class="h1"><a href="#Inicio" class="a">Gonzalo Acero</a></h1>
-      //Inicio menu
+      <!-- Inicio menu -->
       <nav class="nav">
         <ul class="ul">
           <li class="li">
-            <a href="#inicio" title="Inicio" class="a">Item 1</a>
+            <a href="#inicio" title="Inicio" class="a">Inicio</a>
           </li>
           <li class="li">
-            <a href="#works" title="Works" class="a">Item 2</a>
+            <a href="#works" title="Works" class="a">Proyectos</a>
           </li>
           <li class="li">
-            <a href="#about" title="About" class="a">Item 3</a>
+            <a href="#about" title="About" class="a">About</a>
           </li>
         </ul>
       </nav>
@@ -49,24 +46,24 @@
         </section>
       </div>
       <section class="seccion" id="works">
-        //Aca van los proyectos a programar pendientes
+        <!-- Aca van los proyectos a programar pendientes -->
 
-        <h2 class="h2">Projectos</h2>
+        <h2 class="h2">Proyectos</h2>
         <p>
           En este lugar vas a encontrar los proyectos que hice estudiando la
-          carrera de Analisis de Sistemas
+          carrera de Analisis de Sistemas y por mi cuenta
         </p>
 
         <div class="grid">
           <article class="article">
-            <a href="#" title="Proyecto1">
+            <a class="a" href="#" title="Proyecto1">
               <img src="#" alt="Imagen" loading="lazy" />
               <h4 class="h4">Nombre Proyecto</h4>
             </a>
           </article>
         </div>
       </section>
-      <section class="seccion" id="about">
+      <section class="seccion about" id="about">
         <h2 class="h2">Sobre mi</h2>
         <p class="p">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sequi
