--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <title>Portfolio de Gonzalo</title>
-    
+
     <link rel="stylesheet" href="css/app.css" />
     <script src="js/app.js"></script>
   </head>
@@ -35,16 +35,26 @@
     <main class="main">
       <div class="seccion" id="inicio">
         <div class="circulos">
-          <circulo></circulo>
-          <circulo></circulo>
-          <circulo></circulo>
-          <circulo></circulo>
+          <div class="circulo"></div>
+          <div class="circulo"></div>
+          <div class="circulo"></div>
+          <div class="circulo"></div>
         </div>
         <section class="section">
           <h2 class="h2">Gonzalo Acero</h2>
           <h3 class="h3">Backend Developer</h3>
+
+          <ul class="ul">
+            <li class="li">
+              <a href="#" class="a" title="Linkedin">Visitar mi Linkedin</a>
+            </li>
+            <li class="li">
+              <a href="#" class="a" title="Github">Visitar mi Github</a>
+            </li>
+          </ul>
         </section>
       </div>
+
       <section class="seccion" id="works">
         <!-- Aca van los proyectos a programar pendientes -->
 
@@ -57,7 +67,17 @@
         <div class="grid">
           <article class="article">
             <a class="a" href="#" title="Proyecto1">
-              <img src="#" alt="Imagen" loading="lazy" />
+              <figure class="figure">
+                <img class="img" src="#" alt="Imagen" loading="lazy" />
+              </figure>
+              <h4 class="h4">Nombre Proyecto</h4>
+            </a>
+          </article>
+          <article class="article">
+            <a class="a" href="#" title="Proyecto1">
+              <figure class="figure">
+                <img class="img" src="#" alt="Imagen" loading="lazy" />
+              </figure>
               <h4 class="h4">Nombre Proyecto</h4>
             </a>
           </article>
@@ -94,6 +114,17 @@
         </p>
 
         <ul class="rrss">
+          <li class="li">
+            <a
+              href="#"
+              class="a"
+              title="Nombre"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="svg"></svg>
+            </a>
+          </li>
           <li class="li">
             <a
               href="#"
