Finish font-family

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="circulo"></div>
           <div class="circulo"></div>
         </div>
-        <section class="section">
+        <section class="seccion info">
           <h2 class="h2">Gonzalo Acero</h2>
           <h3 class="h3">Backend Developer</h3>
 
@@ -55,7 +55,7 @@
         </section>
       </div>
 
-      <section class="seccion" id="works">
+      <section class="seccion works" id="works">
         <!-- Aca van los proyectos a programar pendientes -->
 
         <h2 class="h2">Proyectos</h2>
