--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <article class="article">
             <a class="a" href="#" title="Proyecto1">
               <figure class="figure">
-                <img class="img" src="#" alt="Imagen" loading="lazy" />
+                <img class="img" src="assets/img/IMG_proyecto.png" alt="Imagen" loading="lazy" />
               </figure>
               <h4 class="h4">Nombre Proyecto</h4>
             </a>
@@ -76,7 +76,7 @@
           <article class="article">
             <a class="a" href="#" title="Proyecto1">
               <figure class="figure">
-                <img class="img" src="#" alt="Imagen" loading="lazy" />
+                <img class="img" src="assets/img/Proyecto_FFMEPG.png" alt="Imagen" loading="lazy" />
               </figure>
               <h4 class="h4">Nombre Proyecto</h4>
             </a>
