--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
     <script src="js/app.js"></script>
   </head>
   <body>
+    <div class="circulos">
+      <svg class="circulo circulo1" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+        <path fill="#FF0066" d="M61.9,5.7C61.9,28.4,31,56.7,0.9,56.7C-29.1,56.7,-58.2,28.4,-58.2,5.7C-58.2,-16.9,-29.1,-33.8,0.9,-33.8C31,-33.8,61.9,-16.9,61.9,5.7Z" transform="translate(100 100)" />
+      </svg>
+      <svg class="circulo circulo2" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+        <path fill="#FF0066" d="M45.7,-9.4C45.7,12.6,22.9,25.1,0.3,25.1C-22.2,25.1,-44.4,12.6,-44.4,-9.4C-44.4,-31.4,-22.2,-62.9,0.3,-62.9C22.9,-62.9,45.7,-31.4,45.7,-9.4Z" transform="translate(100 100)" />
+      </svg>
+      <svg class="circulo circulo3" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+        <path fill="#FF0066" d="M47,-57.3C58.7,-46.1,64.5,-29.3,67.6,-11.9C70.7,5.5,71,23.3,64.5,39.7C57.9,56,44.5,70.8,28.7,74.6C12.9,78.5,-5.3,71.5,-17.3,61.2C-29.4,50.9,-35.3,37.3,-39.1,25.2C-43,13.1,-44.8,2.4,-46.1,-11.2C-47.3,-24.9,-48.1,-41.5,-40.3,-53.3C-32.5,-65.2,-16.3,-72.3,0.7,-73.1C17.6,-73.9,35.2,-68.4,47,-57.3Z" transform="translate(100 100)" />
+      </svg>
+      <svg class="circulo circulo4" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+        <path fill="#FF0066" d="M38.4,23.4C24,47,-31.1,48.4,-44.3,25.5C-57.5,2.6,-28.7,-44.7,-1.2,-45.3C26.4,-46,52.7,-0.2,38.4,23.4Z" transform="translate(100 100)" />
+      </svg>
+    </div>
+
     <header class="header">
       <h1 class="h1"><a href="#Inicio" class="a">Gonzalo Acero</a></h1>
       <!-- Inicio menu -->
@@ -34,12 +49,6 @@
     </header>
     <main class="main">
       <div class="seccion" id="inicio">
-        <div class="circulos">
-          <div class="circulo"></div>
-          <div class="circulo"></div>
-          <div class="circulo"></div>
-          <div class="circulo"></div>
-        </div>
         <section class="seccion info">
           <h2 class="h2">Gonzalo Acero</h2>
           <h3 class="h3">Backend Developer</h3>
@@ -68,7 +77,12 @@
           <article class="article">
             <a class="a" href="#" title="Proyecto1">
               <figure class="figure">
-                <img class="img" src="assets/img/Img_ApiRest.png" alt="Imagen" loading="lazy" />
+                <img
+                  class="img"
+                  src="assets/img/Img_ApiRest.png"
+                  alt="Imagen"
+                  loading="lazy"
+                />
               </figure>
               <h4 class="h4">Nombre Proyecto</h4>
             </a>
@@ -76,7 +90,12 @@
           <article class="article">
             <a class="a" href="#" title="Proyecto1">
               <figure class="figure">
-                <img class="img" src="assets/img/Img_FFMEPG.png" alt="Imagen" loading="lazy" />
+                <img
+                  class="img"
+                  src="assets/img/Img_FFMEPG.png"
+                  alt="Imagen"
+                  loading="lazy"
+                />
               </figure>
               <h4 class="h4">Nombre Proyecto</h4>
             </a>
@@ -122,9 +141,18 @@
               target="_blank"
               rel="noopener noreferrer"
             >
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="svg" viewBox="0 0 16 16">
-              <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
-            </svg>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="svg"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"
+                />
+              </svg>
             </a>
           </li>
           <li class="li">
@@ -135,9 +163,18 @@
               target="_blank"
               rel="noopener noreferrer"
             >
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="svg" viewBox="0 0 16 16">
-              <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
-            </svg>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="svg"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"
+                />
+              </svg>
             </a>
           </li>
         </ul>
