--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
   <body>
     <div class="circulos">
       <svg class="circulo circulo1" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-        <path fill="#FF0066" d="M61.9,5.7C61.9,28.4,31,56.7,0.9,56.7C-29.1,56.7,-58.2,28.4,-58.2,5.7C-58.2,-16.9,-29.1,-33.8,0.9,-33.8C31,-33.8,61.9,-16.9,61.9,5.7Z" transform="translate(100 100)" />
+        <path class="path" d="M61.9,5.7C61.9,28.4,31,56.7,0.9,56.7C-29.1,56.7,-58.2,28.4,-58.2,5.7C-58.2,-16.9,-29.1,-33.8,0.9,-33.8C31,-33.8,61.9,-16.9,61.9,5.7Z" transform="translate(100 100)" />
       </svg>
       <svg class="circulo circulo2" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-        <path fill="#FF0066" d="M45.7,-9.4C45.7,12.6,22.9,25.1,0.3,25.1C-22.2,25.1,-44.4,12.6,-44.4,-9.4C-44.4,-31.4,-22.2,-62.9,0.3,-62.9C22.9,-62.9,45.7,-31.4,45.7,-9.4Z" transform="translate(100 100)" />
+        <path class="path" d="M45.7,-9.4C45.7,12.6,22.9,25.1,0.3,25.1C-22.2,25.1,-44.4,12.6,-44.4,-9.4C-44.4,-31.4,-22.2,-62.9,0.3,-62.9C22.9,-62.9,45.7,-31.4,45.7,-9.4Z" transform="translate(100 100)" />
       </svg>
       <svg class="circulo circulo3" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-        <path fill="#FF0066" d="M47,-57.3C58.7,-46.1,64.5,-29.3,67.6,-11.9C70.7,5.5,71,23.3,64.5,39.7C57.9,56,44.5,70.8,28.7,74.6C12.9,78.5,-5.3,71.5,-17.3,61.2C-29.4,50.9,-35.3,37.3,-39.1,25.2C-43,13.1,-44.8,2.4,-46.1,-11.2C-47.3,-24.9,-48.1,-41.5,-40.3,-53.3C-32.5,-65.2,-16.3,-72.3,0.7,-73.1C17.6,-73.9,35.2,-68.4,47,-57.3Z" transform="translate(100 100)" />
+        <path class="path" d="M47,-57.3C58.7,-46.1,64.5,-29.3,67.6,-11.9C70.7,5.5,71,23.3,64.5,39.7C57.9,56,44.5,70.8,28.7,74.6C12.9,78.5,-5.3,71.5,-17.3,61.2C-29.4,50.9,-35.3,37.3,-39.1,25.2C-43,13.1,-44.8,2.4,-46.1,-11.2C-47.3,-24.9,-48.1,-41.5,-40.3,-53.3C-32.5,-65.2,-16.3,-72.3,0.7,-73.1C17.6,-73.9,35.2,-68.4,47,-57.3Z" transform="translate(100 100)" />
       </svg>
       <svg class="circulo circulo4" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-        <path fill="#FF0066" d="M38.4,23.4C24,47,-31.1,48.4,-44.3,25.5C-57.5,2.6,-28.7,-44.7,-1.2,-45.3C26.4,-46,52.7,-0.2,38.4,23.4Z" transform="translate(100 100)" />
+        <path class="path" d="M38.4,23.4C24,47,-31.1,48.4,-44.3,25.5C-57.5,2.6,-28.7,-44.7,-1.2,-45.3C26.4,-46,52.7,-0.2,38.4,23.4Z" transform="translate(100 100)" />
       </svg>
     </div>
 
