--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
     <title>Portfolio de Gonzalo</title>
 
     <link rel="stylesheet" href="css/app.css" />
-    <script src="js/app.js"></script>
+    <script defer src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
+    <script defer src="js/app.js"></script>
   </head>
   <body>
+
+    <div id="cursor"></div>
+
     <div class="circulos">
       <svg class="circulo circulo1" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
         <path class="path" d="M61.9,5.7C61.9,28.4,31,56.7,0.9,56.7C-29.1,56.7,-58.2,28.4,-58.2,5.7C-58.2,-16.9,-29.1,-33.8,0.9,-33.8C31,-33.8,61.9,-16.9,61.9,5.7Z" transform="translate(100 100)" />
@@ -31,18 +35,18 @@
     </div>
 
     <header class="header">
-      <h1 class="h1"><a href="#Inicio" class="a">Gonzalo Acero</a></h1>
+      <h1 class="h1"><a href="#Inicio" class="a"></a></h1>
       <!-- Inicio menu -->
       <nav class="nav">
         <ul class="ul">
           <li class="li">
-            <a href="#inicio" title="Inicio" class="a">Inicio</a>
+            <a href="#inicio" title="Inicio" class="a"></a>
           </li>
           <li class="li">
-            <a href="#works" title="Works" class="a">Proyectos</a>
+            <a href="#works" title="Works" class="a"></a>
           </li>
           <li class="li">
-            <a href="#about" title="About" class="a">About</a>
+            <a href="#about" title="About" class="a"></a>
           </li>
         </ul>
       </nav>
