--- a/index.html
+++ b/index.html
@@ -12,25 +12,59 @@
     <title>Portfolio de Gonzalo</title>
 
     <link rel="stylesheet" href="css/app.css" />
-    <script defer src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
+    <script
+      defer
+      src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
+    ></script>
     <script defer src="js/app.js"></script>
   </head>
   <body>
-
     <div id="cursor"></div>
 
     <div class="circulos">
-      <svg class="circulo circulo1" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-        <path class="path" d="M61.9,5.7C61.9,28.4,31,56.7,0.9,56.7C-29.1,56.7,-58.2,28.4,-58.2,5.7C-58.2,-16.9,-29.1,-33.8,0.9,-33.8C31,-33.8,61.9,-16.9,61.9,5.7Z" transform="translate(100 100)" />
+      <svg
+        class="circulo circulo1"
+        viewBox="0 0 200 200"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          class="path"
+          d="M61.9,5.7C61.9,28.4,31,56.7,0.9,56.7C-29.1,56.7,-58.2,28.4,-58.2,5.7C-58.2,-16.9,-29.1,-33.8,0.9,-33.8C31,-33.8,61.9,-16.9,61.9,5.7Z"
+          transform="translate(100 100)"
+        />
       </svg>
-      <svg class="circulo circulo2" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-        <path class="path" d="M45.7,-9.4C45.7,12.6,22.9,25.1,0.3,25.1C-22.2,25.1,-44.4,12.6,-44.4,-9.4C-44.4,-31.4,-22.2,-62.9,0.3,-62.9C22.9,-62.9,45.7,-31.4,45.7,-9.4Z" transform="translate(100 100)" />
+      <svg
+        class="circulo circulo2"
+        viewBox="0 0 200 200"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          class="path"
+          d="M45.7,-9.4C45.7,12.6,22.9,25.1,0.3,25.1C-22.2,25.1,-44.4,12.6,-44.4,-9.4C-44.4,-31.4,-22.2,-62.9,0.3,-62.9C22.9,-62.9,45.7,-31.4,45.7,-9.4Z"
+          transform="translate(100 100)"
+        />
       </svg>
-      <svg class="circulo circulo3" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-        <path class="path" d="M47,-57.3C58.7,-46.1,64.5,-29.3,67.6,-11.9C70.7,5.5,71,23.3,64.5,39.7C57.9,56,44.5,70.8,28.7,74.6C12.9,78.5,-5.3,71.5,-17.3,61.2C-29.4,50.9,-35.3,37.3,-39.1,25.2C-43,13.1,-44.8,2.4,-46.1,-11.2C-47.3,-24.9,-48.1,-41.5,-40.3,-53.3C-32.5,-65.2,-16.3,-72.3,0.7,-73.1C17.6,-73.9,35.2,-68.4,47,-57.3Z" transform="translate(100 100)" />
+      <svg
+        class="circulo circulo3"
+        viewBox="0 0 200 200"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          class="path"
+          d="M47,-57.3C58.7,-46.1,64.5,-29.3,67.6,-11.9C70.7,5.5,71,23.3,64.5,39.7C57.9,56,44.5,70.8,28.7,74.6C12.9,78.5,-5.3,71.5,-17.3,61.2C-29.4,50.9,-35.3,37.3,-39.1,25.2C-43,13.1,-44.8,2.4,-46.1,-11.2C-47.3,-24.9,-48.1,-41.5,-40.3,-53.3C-32.5,-65.2,-16.3,-72.3,0.7,-73.1C17.6,-73.9,35.2,-68.4,47,-57.3Z"
+          transform="translate(100 100)"
+        />
       </svg>
-      <svg class="circulo circulo4" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-        <path class="path" d="M38.4,23.4C24,47,-31.1,48.4,-44.3,25.5C-57.5,2.6,-28.7,-44.7,-1.2,-45.3C26.4,-46,52.7,-0.2,38.4,23.4Z" transform="translate(100 100)" />
+      <svg
+        class="circulo circulo4"
+        viewBox="0 0 200 200"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          class="path"
+          d="M38.4,23.4C24,47,-31.1,48.4,-44.3,25.5C-57.5,2.6,-28.7,-44.7,-1.2,-45.3C26.4,-46,52.7,-0.2,38.4,23.4Z"
+          transform="translate(100 100)"
+        />
       </svg>
     </div>
 
@@ -59,10 +93,22 @@
 
           <ul class="ul">
             <li class="li">
-              <a href="#" class="a" title="Linkedin">Visitar mi Linkedin</a>
+              <a
+                href="https://www.linkedin.com/in/gonzalo-acero/"
+                target="_blank"
+                class="a"
+                title="Linkedin"
+                >Visitar mi Linkedin</a
+              >
             </li>
             <li class="li">
-              <a href="#" class="a" title="Github">Visitar mi Github</a>
+              <a
+                href="https://github.com/Gonzalo-Acero"
+                target="_blank"
+                class="a"
+                title="Github"
+                >Visitar mi Github</a
+              >
             </li>
           </ul>
         </section>
@@ -79,7 +125,7 @@
 
         <div class="grid">
           <article class="article">
-            <a class="a" href="#" title="Proyecto1">
+            <a class="a" href="https://github.com/Gonzalo-Acero/APIRest-PluginsMusicales" target="_blank" title="Proyecto1">
               <figure class="figure">
                 <img
                   class="img"
@@ -88,11 +134,11 @@
                   loading="lazy"
                 />
               </figure>
-              <h4 class="h4">Nombre Proyecto</h4>
+              <h4 class="h4">API Rest Musical</h4>
             </a>
           </article>
           <article class="article">
-            <a class="a" href="#" title="Proyecto1">
+            <a class="a" href="https://github.com/Gonzalo-Acero/FFMEPG-Interface" target="_blank" title="Proyecto1">
               <figure class="figure">
                 <img
                   class="img"
@@ -101,7 +147,7 @@
                   loading="lazy"
                 />
               </figure>
-              <h4 class="h4">Nombre Proyecto</h4>
+              <h4 class="h4">Interfaz para FFMEPG</h4>
             </a>
           </article>
         </div>
@@ -109,37 +155,38 @@
       <section class="seccion about" id="about">
         <h2 class="h2">Sobre mi</h2>
         <p class="p">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sequi
-          quae, iusto commodi perspiciatis doloremque itaque cumque deserunt
-          alias, aut cupiditate, autem esse hic assumenda eveniet ipsam eos
-          delectus nostrum. Quisquam ratione laborum sapiente ab consequuntur
-          explicabo corporis, officia iusto porro tempora a perferendis
-          obcaecati aspernatur laudantium, adipisci mollitia nesciunt nulla
-          minus! Numquam sed est assumenda voluptas unde reiciendis suscipit?
+          Soy un backend developer dedicado puntual y proactivo, acostumbrado a
+          trabajar bajo presión debido a mi experiencia como administrativo de
+          comercios minoristas. Podes ver mi CV
+          <a
+            class="a bold-text"
+            target="_blank"
+            href="https://drive.google.com/drive/folders/1rHtWw15WYYspyloCf5iwnRtFgiGNMneX?usp=drive_link"
+            >AQUÍ</a
+          >
         </p>
         <p class="p">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem
-          voluptatum amet magni ratione quam corporis reprehenderit nostrum
-          obcaecati, qui a animi doloribus voluptates tempore aspernatur,
-          tenetur quae consectetur quis optio. Reprehenderit asperiores veniam
-          velit dicta praesentium dolor rerum nam maxime adipisci perspiciatis
-          quibusdam ea natus, deserunt vel, cupiditate eum. Facilis expedita
-          eaque voluptates error voluptas debitis eligendi tempora quia rem.
+          Dentro de los lenguajes que domino se encuentran
+          <span class="bold-text">Java</span>, con su framework
+          <span class="bold-text">SpringBoot</span> y
+          <span class="bold-text">C#</span> con su framework
+          <span class="bold-text">.NET</span>. Teniendo conocimientos tambien en
+          Bases de Datos con <span class="bold-text">MySQL</span> y sé
+          desarrollar frontend con
+          <span class="bold-text">HTML, CSS y JavaScript.</span> Actualmente
+          estoy aprendiendo <span class="bold-text">Python</span>.
         </p>
         <p class="p">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
-          incidunt similique asperiores assumenda sequi recusandae consequatur
-          vero earum iste modi suscipit adipisci, magnam iusto aut inventore ex
-          totam aperiam eos. Odio quas illum blanditiis! Pariatur, neque tempore
-          nam aut enim, harum reiciendis nostrum numquam, earum impedit dicta
-          perferendis dolore mollitia cumque corrupti architecto perspiciatis
-          modi voluptatum! Cumque quibusdam nihil ipsum!
+          Tengo un dominio avanzado del
+          <span class="bold-text">Inglés</span> aparte de una gran capacidad de
+          analisis, me sé manejar y me gusta trabajar en equipo y adoro
+          aprender.
         </p>
 
         <ul class="rrss">
           <li class="li">
             <a
-              href="#"
+              href="https://github.com/Gonzalo-Acero"
               class="a"
               title="Nombre"
               target="_blank"
@@ -161,7 +208,7 @@
           </li>
           <li class="li">
             <a
-              href="#"
+              href="https://www.linkedin.com/in/gonzalo-acero/"
               class="a"
               title="Nombre"
               target="_blank"
