--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital@0;1&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio de Gonzalo</title>
+    <title>Gonzalo Acero</title>
 
     <link rel="stylesheet" href="css/app.css" />
     <script
@@ -98,7 +98,7 @@
                 target="_blank"
                 class="a"
                 title="Linkedin"
-                >Visitar mi Linkedin</a
+                >Linkedin Profile</a
               >
             </li>
             <li class="li">
