--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 target="_blank"
                 class="a"
                 title="Github"
-                >Visitar mi Github</a
+                >Github Profile</a
               >
             </li>
           </ul>
@@ -117,10 +117,9 @@
       <section class="seccion works" id="works">
         <!-- Aca van los proyectos a programar pendientes -->
 
-        <h2 class="h2">Proyectos</h2>
+        <h2 class="h2">Projets</h2>
         <p>
-          En este lugar vas a encontrar los proyectos que hice estudiando la
-          carrera de Analisis de Sistemas y por mi cuenta
+          Here are the projects that I've developed at college and on my own.
         </p>
 
         <div class="grid">
