--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   loading="lazy"
                 />
               </figure>
-              <h4 class="h4">API Rest Musical</h4>
+              <h4 class="h4">APIRest Musical Plugins</h4>
             </a>
           </article>
           <article class="article">
@@ -146,7 +146,7 @@
                   loading="lazy"
                 />
               </figure>
-              <h4 class="h4">Interfaz para FFMEPG</h4>
+              <h4 class="h4">FFMEPG Interface</h4>
             </a>
           </article>
         </div>
@@ -154,14 +154,13 @@
       <section class="seccion about" id="about">
         <h2 class="h2">Sobre mi</h2>
         <p class="p">
-          Soy un backend developer dedicado puntual y proactivo, acostumbrado a
-          trabajar bajo presión debido a mi experiencia como administrativo de
-          comercios minoristas. Podes ver mi CV
+          I am a punctual and proactive dedicated backend developer, accustomed to
+          work under pressure due to my experience as a Commerce Manager. You can see my CV
           <a
             class="a bold-text"
             target="_blank"
             href="https://drive.google.com/drive/folders/1rHtWw15WYYspyloCf5iwnRtFgiGNMneX?usp=drive_link"
-            >AQUÍ</a
+            >HERE</a
           >
         </p>
         <p class="p">
