--- a/index.html
+++ b/index.html
@@ -117,14 +117,19 @@
       <section class="seccion works" id="works">
         <!-- Aca van los proyectos a programar pendientes -->
 
-        <h2 class="h2">Projets</h2>
+        <h2 class="h2">Projects</h2>
         <p>
           Here are the projects that I've developed at college and on my own.
         </p>
 
         <div class="grid">
           <article class="article">
-            <a class="a" href="https://github.com/Gonzalo-Acero/APIRest-PluginsMusicales" target="_blank" title="Proyecto1">
+            <a
+              class="a"
+              href="https://github.com/Gonzalo-Acero/APIRest-PluginsMusicales"
+              target="_blank"
+              title="Proyecto1"
+            >
               <figure class="figure">
                 <img
                   class="img"
@@ -137,7 +142,12 @@
             </a>
           </article>
           <article class="article">
-            <a class="a" href="https://github.com/Gonzalo-Acero/FFMEPG-Interface" target="_blank" title="Proyecto1">
+            <a
+              class="a"
+              href="https://github.com/Gonzalo-Acero/FFMEPG-Interface"
+              target="_blank"
+              title="Proyecto1"
+            >
               <figure class="figure">
                 <img
                   class="img"
@@ -152,10 +162,11 @@
         </div>
       </section>
       <section class="seccion about" id="about">
-        <h2 class="h2">Sobre mi</h2>
+        <h2 class="h2">About me</h2>
         <p class="p">
-          I am a punctual and proactive dedicated backend developer, accustomed to
-          work under pressure due to my experience as a Commerce Manager. You can see my CV
+          I am a punctual and proactive dedicated backend developer, accustomed
+          to work under pressure due to my experience as a Commerce Manager. You
+          can see my CV
           <a
             class="a bold-text"
             target="_blank"
@@ -164,21 +175,19 @@
           >
         </p>
         <p class="p">
-          Dentro de los lenguajes que domino se encuentran
-          <span class="bold-text">Java</span>, con su framework
-          <span class="bold-text">SpringBoot</span> y
-          <span class="bold-text">C#</span> con su framework
-          <span class="bold-text">.NET</span>. Teniendo conocimientos tambien en
-          Bases de Datos con <span class="bold-text">MySQL</span> y sé
-          desarrollar frontend con
-          <span class="bold-text">HTML, CSS y JavaScript.</span> Actualmente
-          estoy aprendiendo <span class="bold-text">Python</span>.
+          I'm actually really skilled developing with
+          <span class="bold-text">Java</span>, and
+          <span class="bold-text">SpringBoot</span> framework. I'm good
+          programming with <span class="bold-text">C#</span> and
+          <span class="bold-text">.NET</span>. I've knowledge using Data Bases
+          like <span class="bold-text">MySQL</span> and I learned how to
+          develope static frontend pages with
+          <span class="bold-text">HTML, CSS y JavaScript.</span> At the moment
+          I'm learning <span class="bold-text">Python</span>.
         </p>
         <p class="p">
-          Tengo un dominio avanzado del
-          <span class="bold-text">Inglés</span> aparte de una gran capacidad de
-          analisis, me sé manejar y me gusta trabajar en equipo y adoro
-          aprender.
+          I have avanced knowledge understanding, writing and speaking in
+          <span class="bold-text">English</span> besides a great analysis ability, I love teamworking and learning new things everyday.
         </p>
 
         <ul class="rrss">
@@ -230,7 +239,7 @@
       </section>
     </main>
     <footer class="footer">
-      <span class="span">Portfolio hecho con amor ♥ - Gonzalo Acero</span>
+      <span class="span">Portfolio made with amor ♥ - Gonzalo Acero</span>
     </footer>
   </body>
 </html>
