--- a/index.html
+++ b/index.html
@@ -162,19 +162,19 @@
           <article class="article">
             <a
               class="a"
-              href="https://github.com/Gonzalo-Acero/FFMEPG-Interface"
+              href="https://github.com/Gonzalo-Acero/Java-Music-Player"
               target="_blank"
               title="Proyecto1"
             >
               <figure class="figure">
                 <img
                   class="img"
-                  src="assets/img/Img_FFMEPG.png"
+                  src="assets/img/Java-Music-Player.png"
                   alt="Imagen"
                   loading="lazy"
                 />
               </figure>
-              <h4 class="h4">FFMEPG Interface</h4>
+              <h4 class="h4">Java Music Player</h4>
             </a>
           </article>
         </div>
