--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <section class="seccion about" id="about">
         <h2 class="h2">About me</h2>
         <p class="p">
-          I am a punctual and proactive dedicated backend developer, accustomed
+          I am a proactive; dedicated and punctual backend developer, accustomed
           to work under pressure due to my experience as a Commerce Manager. You
           can see my CV
           <a
@@ -193,7 +193,7 @@
           >
         </p>
         <p class="p">
-          I'm actually really skilled developing with
+          I'm actually skilled developing with
           <span class="bold-text">Java</span>, and
           <span class="bold-text">SpringBoot</span> framework. I'm good
           programming with <span class="bold-text">C#</span> and
